--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
 html{
     font-family: 'Montserrat', sans-serif;
 }
+
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    height: 100vh;
+}
+
+ul, ol, menu{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: currentColor;
+    cursor: pointer;
+}
+
+img{
+    max-width: 100%;
+    display: block;
+}
