--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,17 @@ img{
     display: block;
 }
 
+/* Colors palette  */
+
+:root{
+    --light: #ffffff;
+    --light-grey: #A3A3A3;
+    --dark-grey: #282828;
+    --dark: black;
+    --dark-blue: #141922;
+    --green: #ADFF2F;
+}
+
 /* App divisions */
 
 .app{
