--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,15 @@ html{
     font-family: 'Montserrat', sans-serif;
 }
 
-body{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body{
     height: 100vh;
+    overflow: hidden;
 }
 
 ul, ol, menu{
@@ -42,7 +46,25 @@ img{
     flex-wrap: nowrap;
 }
 
+.small-text{
+    font-size: 10px;
+}
 
+.medium-text{
+    font-size: 15px;
+}
+
+.large-text{
+    font-size: 25px;
+}
+
+.text-grey{
+    color: var(--light-grey);
+}
+
+.text-white{
+    color: var(--light);
+}
 
 /* App divisions */
 
@@ -56,10 +78,67 @@ img{
     flex-grow: 1;
 }
 
+
+/* toolbar */
+
 .app__toolbar{
     height: 90px;
+    padding: 11px;
     background-color: var(--dark-grey);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.toolbar__current{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.toolbar__current-img{
+    width: 42px;
+    aspect-ratio: 1;
+}
+
+.toolbar__current-icon{
+    margin-left: 30px;
+}
+
+
+
+
+/* media query */
+
+/* `sm` applies to x-small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+
+    
+
+ }
+
+/* `md` applies to small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+
+    
+
+ }
+
+/* `lg` applies to medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+
+    
+
+ }
+
+/* `xl` applies to large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+
+    
+
+ }
+
+
 
 /* debug */
 
@@ -77,7 +156,8 @@ img{
     padding: 10px;
 }
 
-[class^='toolbar__']{
+
+.debug [class^='toolbar__']{
     border: 1px dashed purple;
     padding: 10px;
 }
