--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,8 @@ img{
     align-items: center;
 }
 
+/* Current song */
+
 .toolbar__current{
     display: flex;
     align-items: center;
@@ -105,7 +107,25 @@ img{
     margin-left: 30px;
 }
 
+/* Media player */
 
+.toolbar__player{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.toolbar__player-icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 22px;
+    color: var(--light);
+}
+
+.player-icons__play{
+    padding: 0px 10px;
+}
 
 
 /* media query */
@@ -113,28 +133,28 @@ img{
 /* `sm` applies to x-small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
 
-    
+
 
  }
 
 /* `md` applies to small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
 
-    
+
 
  }
 
 /* `lg` applies to medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
 
-    
+
 
  }
 
 /* `xl` applies to large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
 
-    
+
 
  }
 
