--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,10 @@ img{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 /* Current song */
