--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,60 @@ img{
 
 /* App content */
 
+
 .app__content{
     flex-grow: 1;
 }
 
+/* Main content header */
+
+.app__content-header{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 90px;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 20px;
+    position: sticky;
+}
+
+.header-button{
+    font-size: 13px;
+    text-transform: uppercase;
+    border: 2px solid var(--light);
+    border-radius: 999px;
+    padding: 12px 44px;
+    white-space: nowrap;
+}
+
+.header-button:hover{
+    transform: scale(1.1);
+}
+
+.app__content-nav{
+    padding: 20px;
+}
+
+.nav-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}
+
+.nav-list__item{
+    padding: 5px 0px;
+    color: var(--light-grey);
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.nav-list__item:hover{
+    border-bottom: 2px solid var(--green);
+    color: var(--light);
+}
 
 /* toolbar */
 
