--- a/css/style.css
+++ b/css/style.css
@@ -280,17 +280,31 @@ img{
 }
 
 .nav-list__item{
-    padding: 5px 0px;
+    padding: 10px 0px;
     color: var(--light-grey);
     text-transform: uppercase;
     font-size: 13px;
     font-weight: bold;
-    border-bottom: 2px solid transparent;
+    position: relative;
+}
+
+.bottom-border::after{
+    content: '';
+    position: absolute;
+    background-color: transparent;
+    width: 30px;
+    height: 3px;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .nav-list__item:hover{
-    border-bottom: 2px solid var(--green);
     color: var(--light);
+}
+
+.bottom-border:hover::after{
+    background-color: var(--green);
 }
 
 /* toolbar */
