--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,12 @@ img{
     object-fit: cover;
 }
 
+.circle-img-hidden{
+    border-radius: 100%;
+    aspect-ratio: 1;
+    overflow: hidden;
+}
+
 /* App divisions */
 
 .app{
@@ -303,11 +309,12 @@ img{
     content: '';
     position: absolute;
     background-color: transparent;
-    width: 30px;
+    width: 0px;
     height: 3px;
     bottom: 0;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: 0.3s ease-in-out;
 }
 
 .nav-list__item:hover{
@@ -316,6 +323,38 @@ img{
 
 .bottom-border:hover::after{
     background-color: var(--green);
+    width: 30px;
+}
+
+.playlists__img{
+    position: relative;
+}
+
+.play-icon{
+    position: absolute;
+    color: var(--light);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+.play-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.play {
+    font-size: 70px;
+}
+
+.playlists__img:hover .play-icon{
+    opacity: 1;
+    cursor: pointer;
 }
 
 /* Main content playlists */
